crates/oxc_react_compiler/tests/snapshots/new-mutability__useMemo-reordering-depslist-assignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/useMemo-reordering-depslist-assignment.ts
---
import { c as _c } from "react/compiler-runtime";
// @enableNewMutationAliasingModel @enablePreserveExistingMemoizationGuarantees:false @validateExhaustiveMemoizationDependencies:false
import { useMemo } from "react";
function useFoo(arr1, arr2) {
	const $ = _c(7);
	let t0;
	if ($[0] !== arr1) {
		t0 = [arr1];
		$[0] = arr1;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	let y;
	if ($[2] !== arr2 || $[3] !== x) {
		y = x.concat(arr2), y;
		$[2] = arr2;
		$[3] = x;
		$[4] = y;
	} else {
		y = $[4];
	}
	let t1;
	if ($[5] !== y) {
		t1 = { y };
		$[5] = y;
		$[6] = t1;
	} else {
		t1 = $[6];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [[1, 2], [3, 4]]
};
