crates/oxc_react_compiler/tests/snapshots/new-mutability__valid-new-date-from-timestamp.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/valid-new-date-from-timestamp.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(4);
	const { timestamp } = t0;
	let t1;
	if ($[0] !== timestamp) {
		t1 = new Date(timestamp);
		$[0] = timestamp;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const date = t1;
	let t2;
	if ($[2] !== date) {
		t2 = <Foo date={date} />;
		$[2] = date;
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	return t2;
}
